[tool.poetry]
name = "api-task"
version = "0.1.0"
description = ""
authors = ["Igor Batischev <igor.bat2013@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.12"
unicorn = "^2.1.3"
uvicorn = "^0.34.2"
sqlmodel = "^0.0.24"
aiosqlite = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "api_task.main:start"
